wix: bump the minimum Windows required to 8.1
PyOxidizer binaries are built with py 3.9.6, so not even Windows 7 is supported.
Unfortunately, there don't appear to be more recent values for newer versions of
Windows, but at least Windows 8.1 is still in extended support for another 9
months or so.

Differential Revision: https://phab.mercurial-scm.org/D12596

--- a/contrib/packaging/wix/mercurial.wxs
+++ b/contrib/packaging/wix/mercurial.wxs
@@ -33,8 +33,8 @@
            CompressionLevel='high' />
     <Property Id='DiskPrompt' Value="Mercurial $(var.Version) Installation [1]" />
 
-    <Condition Message='Mercurial MSI installers require Windows XP or higher'>
-        VersionNT >= 501
+    <Condition Message='Mercurial MSI installers require Windows 8.1 or higher'>
+        VersionNT >= 603
     </Condition>
 
     <Property Id="INSTALLDIR">
